crates/bingo-surface-tui/src/snapshots/bingo_surface_tui__screens__acp_calls_120x40.snap
---
source: crates/bingo-surface-tui/src/screens.rs
expression: "draw_tree(120, 40, tree, ui, now)"
---
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"╭──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────╮"
"│ ✻ Welcome to bingo!                                                                                                  │"
"│                                                                                                                      │"
"│   /help for help · /login codex to use a subscription                                                                │"
"│   cwd: /tmp/project                                                                                                  │"
"╰──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────╯"
"                                                                                                                        "
"> rename the wire module                                                                                                "
"                                                                                                                        "
"✻ Thought for 1s                                                                                                        "
"  ⎿  the import list moves too                                                                                          "
"                                                                                                                        "
"⏺ Read(src/lib.rs)                                                                                                      "
"  ⎿  pub mod wire;                                                                                                      "
"                                                                                                                        "
"⏺ Edit(src/lib.rs)                                                                                                      "
"  ⎿  --- /tmp/project/src/lib.rs                                                                                        "
"     -pub mod wire;                                                                                                     "
"     +pub mod envelope;                                                                                                 "
"                                                                                                                        "
"⏺ Run(cargo test -p wire)                                                                                               "
"  ⎿  error: no target named `wire`                                                                                      "
"                                                                                                                        "
"⏺ Renamed `wire` to `envelope`; the test target still points at the old name.                                           "
"                                                                                                                        "
"                                                                                                                        "
"╭──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────╮"
"│ > ask anything · / for commands · ! for shell                                                                        │"
"╰──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────╯"
"? for shortcuts                                                                                              fake/fake-1"
