crates/bingo-surface-tui/src/snapshots/bingo_surface_tui__screens__at_dropdown_80x24.snap
---
source: crates/bingo-surface-tui/src/screens.rs
expression: "draw_tree(80, 24, tree, ui, now)"
---
"                                                                                "
"> line 15                                                                       "
"                                                                                "
"> line 16                                                                       "
"                                                                                "
"> line 17                                                                       "
"                                                                                "
"> line 18                                                                       "
"                                                                                "
"> line 19                                                                       "
"                                                                                "
"> line 20                                                                       "
"                                                                                "
"> line 21                                                                       "
"                                                                                "
"> line 22                                                                       "
"❯ @src/lib.rs                                                                   "
"  @src/markdown.rs                                                              "
"  @src/pager.rs                                                                 "
"  @src/theme.rs                                                                 "
"╭──────────────────────────────────────────────────────────────────────────────╮"
"│ > read @src/                                                                 │"
"╰──────────────────────────────────────────────────────────────────────────────╯"
"                                                                     fake/fake-1"
