crates/bingo-surface-tui/src/snapshots/bingo_surface_tui__screens__at_dropdown_agents_120x40.snap
---
source: crates/bingo-surface-tui/src/screens.rs
expression: "draw_tree(120, 40, tree, ui, now)"
---
"                                                                                                                        "
"> line 7                                                                                                                "
"                                                                                                                        "
"> line 8                                                                                                                "
"                                                                                                                        "
"> line 9                                                                                                                "
"                                                                                                                        "
"> line 10                                                                                                               "
"                                                                                                                        "
"> line 11                                                                                                               "
"                                                                                                                        "
"> line 12                                                                                                               "
"                                                                                                                        "
"> line 13                                                                                                               "
"                                                                                                                        "
"> line 14                                                                                                               "
"                                                                                                                        "
"> line 15                                                                                                               "
"                                                                                                                        "
"> line 16                                                                                                               "
"                                                                                                                        "
"> line 17                                                                                                               "
"                                                                                                                        "
"> line 18                                                                                                               "
"                                                                                                                        "
"> line 19                                                                                                               "
"                                                                                                                        "
"> line 20                                                                                                               "
"                                                                                                                        "
"> line 21                                                                                                               "
"Agents                                                                                                                  "
"❯ @reviewer                                                                                                             "
"  @researcher                                                                                                           "
"Files                                                                                                                   "
"  @src/reader.rs                                                                                                        "
"  @src/rewind.rs                                                                                                        "
"╭──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────╮"
"│ > @re                                                                                                                │"
"╰──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────╯"
"                                                                                                             fake/fake-1"
